# fin

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  graph.py  pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
data/: plug_fig.lzma
data/api/: tickers_list.lzma
fin/: config.py  just_a_test.html  run_app.py  stock_analysis.py
fin/domain/logic/: stocks.py
fin/domain/session/: usersession.py
fin/domain/web_layout/: core_elements.py
fin/io/: run_app.py
src/: config.py  data.pkl  run_app.py  stock_analysis.py
src/session/: usersession.py
src/web_layout/: core_elements.py
