[tool.black]
line-length = 88

[tool.isort]
known_third_party = ["cufflinks", "dash", "dash_bootstrap_components", "dash_core_components", "dash_html_components", "dotenv", "joblib", "pandas", "pkg_resources", "plotly", "pylab", "yfinance"]
line_length = 88
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"

[tool.poetry]
name = "fin"
version = "0.1.0"
description = "This is a playground to work on financial python applications."
authors = ["D Stumpy <dstumpy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "5.2"
matplotlib = "^3.3.3"
plotly = "^4.14.1"
cufflinks = "^0.17.3"
python-dotenv = "^0.15.0"
yfinance = "^0.1.55"
dash = "^1.19.0"
joblib = "^1.0.0"
Yahoo-ticker-downloader = "^3.0.1"
dash-bootstrap-components = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.4"
flake8-eradicate = "1.0.0"
mypy = "0.790"
pre-commit = "2.8.2"
pydocstyle = "5.1.1"
jupyter = "1.0.0"

[build-system]
requires = ["poetry>= 1.1.4"]
build-backend = "poetry.masonry.api"
